--- a/manager/src/main/res/layout/style_preview_card.xml
+++ b/manager/src/main/res/layout/style_preview_card.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/styleCard"
+    style="@style/MotivCard"
+    android:layout_width="80dp"
+    android:layout_height="80dp">
 
+    <ImageView
+        android:id="@+id/styleImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        tools:background="@color/colorAccent" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/styleCard"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        style="@style/MotivCard">
+    <com.ilustris.motiv.base.components.MotivTextView
+        android:id="@+id/styleText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/margin_default_10dp"
+        android:autoSizeMaxTextSize="@dimen/big_quote_size"
+        android:autoSizeMinTextSize="@dimen/min_quote_size"
+        android:autoSizeTextType="uniform"
+        android:breakStrategy="high_quality"
+        android:gravity="center"
+        android:text="Motiv"
+        android:textAlignment="center"
+        android:transitionName="@string/style_text_transtition"
+        app:motivStrokeWidth="@dimen/default_stroke"
+        tools:textColor="@color/white" />
+</com.google.android.material.card.MaterialCardView>
 
-        <ImageView
-            android:id="@+id/styleImage"
-            tools:background="@color/colorAccent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
-
-        <com.ilustris.motiv.base.components.MotivTextView
-            android:id="@+id/styleText"
-            android:layout_width="match_parent"
-            android:layout_margin="@dimen/margin_default_10dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="Motiv"
-            android:autoSizeMaxTextSize="@dimen/big_quote_size"
-            android:autoSizeMinTextSize="@dimen/min_quote_size"
-            android:autoSizeTextType="uniform"
-            android:breakStrategy="high_quality"
-            app:motivStrokeWidth="@dimen/default_stroke"
-            tools:textColor="@color/white"
-            android:textAlignment="center"
-            android:transitionName="@string/style_text_transtition" />
-    </com.google.android.material.card.MaterialCardView>
-
-</layout>
