--- a/manager/src/main/res/layout/motiv_manager_toolbar.xml
+++ b/manager/src/main/res/layout/motiv_manager_toolbar.xml
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/toolbarContainer"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bottom_line">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/motiv_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:gravity="center"
+        android:theme="@style/AppToolbar"
+        app:title=" " />
 
     <RelativeLayout
-        android:id="@+id/toolbarContainer"
+        android:id="@+id/titleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bottom_line">
+        android:layout_height="?attr/actionBarSize">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/motiv_toolbar"
+        <TextView
+            android:id="@+id/motivTitle"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/jost"
             android:gravity="center"
-            android:theme="@style/AppToolbar"
-            app:title=" " />
-
-        <RelativeLayout
-            android:id="@+id/titleView"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
-
-            <TextView
-                android:id="@+id/motivTitle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:fontFamily="@font/jost"
-                android:gravity="center"
-                android:maxLength="50"
-                android:maxLines="1"
-                android:text="@string/app_name"
-                android:textAppearance="@style/ToolbarTitle" />
-        </RelativeLayout>
-
+            android:maxLength="50"
+            android:maxLines="1"
+            android:text="@string/app_name"
+            android:textAppearance="@style/ToolbarTitle" />
     </RelativeLayout>
-</layout>
+
+</RelativeLayout>
