--- a/manager/src/main/res/layout/style_text_page_layout.xml
+++ b/manager/src/main/res/layout/style_text_page_layout.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/styleText"
+        tools:showIn="@layout/new_style_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:transitionName="@string/style_text_transtition"
-            android:id="@+id/styleText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:padding="@dimen/padding_default_16dp"
-            android:text="Motiv"
-            android:textAlignment="center"
-            android:textColor="@color/md_white"
-            android:autoSizeMinTextSize="@dimen/default_quote_size"
-            android:textSize="@dimen/big_quote_size"
-            tools:showIn="@layout/new_style_form" />
-    </RelativeLayout>
-</layout>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:autoSizeMinTextSize="@dimen/default_quote_size"
+        android:gravity="center"
+        android:padding="@dimen/padding_default_16dp"
+        android:text="Motiv"
+        android:textAlignment="center"
+        android:textColor="@color/md_white"
+        android:textSize="@dimen/big_quote_size"
+        android:transitionName="@string/style_text_transtition" />
+</RelativeLayout>
