--- a/manager/src/main/res/layout/fragment_covers.xml
+++ b/manager/src/main/res/layout/fragment_covers.xml
@@ -1,87 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.covers.CoversFragment">
 
-    <data>
-
-    </data>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.covers.CoversFragment">
+        android:layout_height="wrap_content"
+        android:background="?android:colorBackground">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:background="?android:colorBackground"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:contentScrim="?android:colorBackground"
+            app:expandedTitleGravity="top|center"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                app:contentScrim="?android:colorBackground"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:expandedTitleGravity="top|center"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                android:orientation="vertical">
 
-                <LinearLayout
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/searchview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <androidx.appcompat.widget.SearchView
-                        android:id="@+id/searchview"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/padding_default_16dp"
-                        android:background="@drawable/round_stroke_filled"
-                        android:focusedByDefault="true"
-                        app:iconifiedByDefault="false"
-                        app:queryHint="Buscar gifs" />
+                    android:layout_margin="@dimen/padding_default_16dp"
+                    android:background="@drawable/round_stroke_filled"
+                    android:focusedByDefault="true"
+                    app:iconifiedByDefault="false"
+                    app:queryHint="Buscar gifs" />
 
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/padding_default_16dp"
-                        android:text="Planos de fundo"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                        android:textStyle="bold" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/padding_default_16dp"
+                    android:text="Planos de fundo"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textStyle="bold" />
 
-                    <ImageView
-                        android:layout_marginHorizontal="@dimen/padding_default_16dp"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/giphy_mark"
-                        app:tint="?android:textColorPrimary" />
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/padding_default_16dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/giphy_mark"
+                    app:tint="?android:textColorPrimary" />
 
-                    <com.giphy.sdk.ui.views.GiphyGridView
-                        android:id="@+id/gifsGridView"
-                        android:background="@color/transparent"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_marginHorizontal="@dimen/padding_default_16dp"
-                        app:gphCellPadding="@dimen/padding_small_8dp"
-                        app:gphDirection="horizontal"
-                        app:gphShowCheckeredBackground="false"
-                        app:gphSpanCount="2" />
+                <com.giphy.sdk.ui.views.GiphyGridView
+                    android:id="@+id/gifsGridView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginHorizontal="@dimen/padding_default_16dp"
+                    android:background="@color/transparent"
+                    app:gphCellPadding="@dimen/padding_small_8dp"
+                    app:gphDirection="horizontal"
+                    app:gphShowCheckeredBackground="false"
+                    app:gphSpanCount="2" />
 
-                </LinearLayout>
-
-
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+            </LinearLayout>
 
 
-        </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/coversRecycler"
-            android:layout_width="match_parent"
-            tools:listitem="@layout/fragment_covers"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</layout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/coversRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        tools:listitem="@layout/fragment_covers" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
