--- a/app/src/main/res/layout/users_page_card.xml
+++ b/app/src/main/res/layout/users_page_card.xml
@@ -13,7 +13,7 @@
         android:layout_marginHorizontal="@dimen/margin_big_16dp"
         android:layout_marginVertical="?attr/actionBarSize"
         android:background="@drawable/round"
-        android:backgroundTint="?attr/dropShadowColor"
+        android:backgroundTint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
