--- a/base/src/main/res/layout/quotes_card.xml
+++ b/base/src/main/res/layout/quotes_card.xml
@@ -27,6 +27,7 @@
         android:layout_marginHorizontal="@dimen/margin_small_4dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="@dimen/padding_small_8dp"
+        android:stateListAnimator="@animator/text_animator"
         app:cardBackgroundColor="@color/transparent"
         app:layout_constraintBottom_toBottomOf="@id/cardShadow"
         app:layout_constraintEnd_toEndOf="@id/cardShadow"
@@ -74,7 +75,7 @@
                 android:padding="@dimen/padding_default_16dp"
                 android:stateListAnimator="@animator/text_animator"
                 android:textAlignment="center"
-                android:textSize="@dimen/default_quote_size"
+                android:textSize="@dimen/big_quote_size"
                 android:textStyle="bold"
                 android:transitionName="@string/quote_transaction"
                 android:typeface="normal"
@@ -96,6 +97,7 @@
                 android:breakStrategy="high_quality"
                 android:gravity="center"
                 android:padding="@dimen/padding_small_8dp"
+                android:textSize="@dimen/default_quote_size"
                 android:textAlignment="center"
                 android:textStyle="italic"
                 android:transitionName="@string/author_transaction"
