--- a/base/src/main/res/drawable/top_line.xml
+++ b/base/src/main/res/drawable/top_line.xml
@@ -12,10 +12,10 @@
         android:left="-3dp"
         android:right="-3dp">
         <shape>
-            <solid android:color="?android:navigationBarColor" />
+            <solid android:color="@color/transparent" />
             <stroke
                 android:width="1dp"
-                android:color="@color/material_grey800" />
+                android:color="@color/white" />
         </shape>
     </item>
 
