--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -104,7 +104,8 @@
     </style>
 
     <style name="StyleCard" parent="Widget.MaterialComponents.CardView">
-        <item name="cardCornerRadius">@dimen/radius_small_5dp</item>
+        <item name="cardCornerRadius">@dimen/radius_default_10dp</item>
+        <item name="cardElevation">0dp</item>
         <item name="cardBackgroundColor">@color/colorAccent</item>
         <item name="strokeColor">@color/selected_style</item>
         <item name="strokeWidth">@dimen/default_stroke</item>
