--- a/base/src/main/res/values/themes.xml
+++ b/base/src/main/res/values/themes.xml
@@ -23,6 +23,7 @@
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:fitsSystemWindows">true</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:isLightTheme">true</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
 
     </style>
