--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mainContainer"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
@@ -13,7 +14,6 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/mainBottom"
         app:defaultNavHost="true"
         app:navGraph="@navigation/main_navigation" />
 
@@ -32,18 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="32dp" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:colorBackground"
-            app:elevation="0dp"
-            app:itemIconSize="20dp"
-            app:itemIconTint="@color/selected_navigation"
-            app:itemRippleColor="@color/colorAccent"
-            app:itemTextColor="@color/selected_navigation"
-            app:labelVisibilityMode="unlabeled"
-            app:menu="@menu/navigation_menu" />
+
     </LinearLayout>
 
 </RelativeLayout>
