--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,21 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profileContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/profileTop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom_line"
+        android:backgroundTint="?attr/dividerColor"
+        android:paddingBottom="@dimen/padding_small_8dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/usercover"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:background="@drawable/dribble_gradient" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_anchor="@id/usercover"
+            app:layout_anchorGravity="bottom|center">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profilepic"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:civ_border_color="?attr/dropShadowColor"
+                app:civ_border_width="@dimen/default_stroke"
+                app:civ_circle_background_color="?attr/dividerColor"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/impressed_avatar" />
+
+            <TextView
+                android:id="@+id/username"
+                style="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginVertical="@dimen/margin_small_4dp"
+                android:textStyle="bold"
+                app:layout_anchorGravity="center"
+                app:layout_constraintEnd_toEndOf="@id/profilepic"
+                app:layout_constraintStart_toStartOf="@id/profilepic"
+                app:layout_constraintTop_toBottomOf="@id/profilepic"
+                tools:text="Caio" />
+
+            <include
+                android:id="@+id/posts_count"
+                layout="@layout/profile_tab"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/margin_default_10dp"
+                app:layout_constraintStart_toStartOf="@id/profilepic"
+                app:layout_constraintTop_toBottomOf="@id/username" />
+
+            <View
+                android:layout_width="@dimen/default_stroke"
+                android:layout_height="0dp"
+                android:layout_marginVertical="@dimen/margin_default_10dp"
+                android:background="?attr/dividerColor"
+                app:layout_constraintBottom_toBottomOf="@id/posts_count"
+                app:layout_constraintEnd_toStartOf="@id/likes_count"
+                app:layout_constraintStart_toEndOf="@id/posts_count"
+                app:layout_constraintTop_toTopOf="@id/posts_count" />
+
+            <include
+                android:id="@+id/likes_count"
+                layout="@layout/profile_tab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/padding_default_16dp"
+                android:layout_marginVertical="@dimen/margin_default_10dp"
+                app:layout_constraintStart_toEndOf="@id/posts_count"
+                app:layout_constraintTop_toBottomOf="@id/username" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/optionsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_default_10dp"
+                android:background="@color/transparent"
+                android:tint="?android:textColorPrimary"
+                app:layout_constraintBottom_toBottomOf="@id/username"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/username"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/options"
+                app:lottie_repeatMode="reverse" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <include
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/quotesView"
         layout="@layout/quote_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+        app:layout_constraintTop_toBottomOf="@id/profileTop" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
