--- a/base/src/main/res/layout/quotes_card.xml
+++ b/base/src/main/res/layout/quotes_card.xml
@@ -10,8 +10,7 @@
         android:id="@+id/cardShadow"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/margin_big_16dp"
-        android:layout_marginVertical="?attr/actionBarSize"
+        android:layout_marginStart="@dimen/margin_default_10dp"
         android:background="@drawable/round"
         android:backgroundTint="?attr/dropShadowColor"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,9 +23,8 @@
         style="@style/MotivCard"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/margin_small_4dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="@dimen/padding_small_8dp"
+        android:layout_marginEnd="@dimen/margin_small_4dp"
+        android:layout_marginBottom="@dimen/margin_small_4dp"
         android:stateListAnimator="@animator/text_animator"
         app:cardBackgroundColor="@color/transparent"
         app:layout_constraintBottom_toBottomOf="@id/cardShadow"
